# toprolog

./: pyproject.toml  start.py
tests/prolog/: draft.pl  rps.pl
